--- a/src/static/css/modals/edit_material_modal.css
+++ b/src/static/css/modals/edit_material_modal.css
@@ -22,7 +22,7 @@
     width: 90%;
     max-width: 700px;
     box-shadow: 0 15px 35px rgba(0, 0, 0, 0.5);
-    max-height: 80vh;
+    max-height: calc(100vh - 60px);
     overflow-y: auto;
     border: 1px solid rgba(255, 255, 255, 0.1);
 }
